--- a/public/css/match.css
+++ b/public/css/match.css
@@ -288,6 +288,28 @@ body {
   gap: 2rem;
   box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.3);
 }
+@media screen and (max-width: 800px) {
+  .game {
+    grid-template-columns: 10% 10% 15% 5% 1fr 3rem;
+  }
+}
+@media screen and (max-width: 700px) {
+  .game {
+    grid-template-rows: -webkit-min-content 1fr;
+    grid-template-rows: min-content 1fr;
+    grid-template-columns: 10% 20% 5% 1fr 3rem;
+    row-gap: 0.5rem;
+  }
+}
+@media screen and (max-width: 550px) {
+  .game {
+    grid-template-rows: -webkit-min-content -webkit-max-content -webkit-max-content 1fr;
+    grid-template-rows: min-content max-content max-content 1fr;
+    row-gap: 1rem;
+    -moz-column-gap: 3rem;
+         column-gap: 3rem;
+  }
+}
 .game_companionIMG {
   width: 5rem;
   height: 5rem;
@@ -323,6 +345,12 @@ body {
   background-color: var(--color-first07);
   color: #72757e;
 }
+@media screen and (max-width: 700px) {
+  .game_extend {
+    grid-row: 1/-1;
+    grid-column: 5/6;
+  }
+}
 .game_details {
   text-align: center;
 }
@@ -330,12 +358,33 @@ body {
   font-weight: bold;
   font-size: 2rem;
 }
+@media screen and (max-width: 700px) {
+  .game_details {
+    grid-column: 1/5;
+    display: flex;
+    align-items: center;
+    padding: 0.3rem;
+    border-bottom: 1px solid rgba(114, 117, 126, 0.2);
+  }
+  .game_details > * {
+    margin-right: 1.5rem;
+  }
+}
 .game_profile {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   white-space: nowrap;
+}
+@media screen and (max-width: 550px) {
+  .game_profile {
+    grid-row: 2/4;
+    grid-column: 1/2;
+    align-self: center;
+    padding: 1rem;
+    margin-left: 1rem;
+  }
 }
 .game_loading {
   display: flex;
@@ -367,6 +416,18 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
+@media screen and (max-width: 550px) {
+  .game_traits {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    grid-column: 2/5;
+    grid-row: 2/3;
+    justify-self: flex-start;
+    align-self: flex-end;
+  }
+}
 .game_auguments {
   display: flex;
   flex-direction: column;
@@ -382,6 +443,20 @@ body {
 .game_auguments_img {
   width: 3rem;
   height: 3rem;
+}
+@media screen and (max-width: 550px) {
+  .game_auguments {
+    grid-column: 2/-1;
+    grid-row: 3/4;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-self: flex-start;
+  }
+  .game_auguments > * {
+    margin-right: 1rem;
+  }
 }
 .game_champs {
   display: flex;
@@ -429,6 +504,14 @@ body {
   height: 1.5rem;
   border: 1px solid black;
 }
+@media screen and (max-width: 550px) {
+  .game_champs {
+    grid-column: 1/5;
+    grid-row: 4/5;
+    border-top: 1px solid rgba(114, 117, 126, 0.2);
+    padding-top: 1rem;
+  }
+}
 .game_stats {
   justify-self: center;
   display: flex;
@@ -449,4 +532,9 @@ body {
   height: 1.5rem;
   margin-right: 0.5rem;
   color: #cebe94;
+}
+@media screen and (max-width: 800px) {
+  .game_stats {
+    display: none;
+  }
 }
