--- a/resources/scss/match.scss
+++ b/resources/scss/match.scss
@@ -284,6 +284,21 @@ body {
     gap: 2rem;
     box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.3);
 
+    @media screen and (max-width: 800px) {
+        grid-template-columns: 10% 10% 15% 5% 1fr 3rem;
+    }
+
+    @media screen and (max-width: 700px) {
+        grid-template-rows: min-content 1fr;
+        grid-template-columns: 10% 20% 5% 1fr 3rem;
+        row-gap: 0.5rem;
+    }
+    @media screen and (max-width: 550px) {
+        grid-template-rows: min-content max-content max-content 1fr;
+        row-gap: 1rem;
+        column-gap: 3rem;
+    }
+
     &_companionIMG {
         width: 5rem;
         height: 5rem;
@@ -332,6 +347,10 @@ body {
             background-color: var(--color-first07);
             color: #72757e;
         }
+        @media screen and (max-width: 700px) {
+            grid-row: 1/-1;
+            grid-column: 5/6;
+        }
     }
 
     &_details {
@@ -339,6 +358,17 @@ body {
         &_place {
             font-weight: bold;
             font-size: 2rem;
+        }
+        @media screen and (max-width: 700px) {
+            grid-column: 1/5;
+            display: flex;
+            align-items: center;
+            padding: 0.3rem;
+            border-bottom: 1px solid rgba(#72757e, 0.2);
+
+            & > * {
+                margin-right: 1.5rem;
+            }
         }
     }
 
@@ -348,6 +378,13 @@ body {
         align-items: center;
         justify-content: center;
         white-space: nowrap;
+        @media screen and (max-width: 550px) {
+            grid-row: 2/4;
+            grid-column: 1/2;
+            align-self: center;
+            padding: 1rem;
+            margin-left: 1rem;
+        }
     }
 
     &_loading {
@@ -387,6 +424,16 @@ body {
                 }
             }
         }
+        @media screen and (max-width: 550px) {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            flex-wrap: wrap;
+            grid-column: 2/5;
+            grid-row: 2/3;
+            justify-self: flex-start;
+            align-self: flex-end;
+        }
     }
     &_auguments {
         display: flex;
@@ -404,6 +451,19 @@ body {
         &_img {
             width: 3rem;
             height: 3rem;
+        }
+        @media screen and (max-width: 550px) {
+            grid-column: 2/-1;
+            grid-row: 3/4;
+            display: flex;
+            align-items: center;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-self: flex-start;
+
+            & > * {
+                margin-right: 1rem;
+            }
         }
     }
 
@@ -459,6 +519,12 @@ body {
                 border: 1px solid black;
             }
         }
+        @media screen and (max-width: 550px) {
+            grid-column: 1/5;
+            grid-row: 4/5;
+            border-top: 1px solid rgba(#72757e, 0.2);
+            padding-top: 1rem;
+        }
     }
     &_stats {
         justify-self: center;
@@ -483,6 +549,10 @@ body {
                 margin-right: 0.5rem;
                 color: rgb(206, 190, 148);
             }
+        }
+
+        @media screen and (max-width: 800px) {
+            display: none;
         }
     }
 }
