--- a/public/css/match.css
+++ b/public/css/match.css
@@ -121,6 +121,10 @@ body {
 .match_error_player a {
   color: inherit;
 }
+.match_left {
+  grid-row: 1/2;
+  grid-column: 1/2;
+}
 @media screen and (max-width: 1000px) {
   .match_left {
     display: grid;
@@ -128,11 +132,22 @@ body {
     align-items: stretch;
     gap: 1rem;
     justify-content: center;
+    grid-column: 1/-1;
   }
 }
 @media screen and (max-width: 500px) {
   .match_left {
     grid-template-columns: 1fr;
+  }
+}
+.match_right {
+  grid-row: 1/2;
+  grid-column: 2/3;
+}
+@media screen and (max-width: 1000px) {
+  .match_right {
+    grid-column: 1/-1;
+    grid-row: 2/3;
   }
 }
 .match_profile {
@@ -156,10 +171,18 @@ body {
   border: 1px solid rgba(114, 117, 126, 0.2);
   font-size: 1.4rem;
   width: 100%;
-  height: 20rem;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
   margin-bottom: 2rem;
   border-radius: 3px;
   margin-top: 2rem;
+  padding: 1rem;
+}
+@media screen and (max-width: 1000px) {
+  .match_summary {
+    grid-column: 1/-1;
+  }
 }
 .match_history {
   background-color: var(--black_box);
