--- a/resources/scss/match.scss
+++ b/resources/scss/match.scss
@@ -116,12 +116,15 @@ body {
     }
 
     &_left {
+        grid-row: 1/2;
+        grid-column: 1/2;
         @media screen and (max-width: 1000px) {
             display: grid;
             grid-template-columns: 1fr 1fr;
             align-items: stretch;
             gap: 1rem;
             justify-content: center;
+            grid-column: 1/-1;
         }
         @media screen and (max-width: 500px) {
             grid-template-columns: 1fr;
@@ -129,6 +132,13 @@ body {
     }
 
     &_right {
+        grid-row: 1/2;
+        grid-column: 2/3;
+
+        @media screen and (max-width: 1000px) {
+            grid-column: 1/-1;
+            grid-row: 2/3;
+        }
     }
 
     &_profile {
@@ -152,10 +162,15 @@ body {
         border: 1px solid rgba(#72757e, 0.2);
         font-size: 1.4rem;
         width: 100%;
-        height: 20rem;
+        height: max-content;
         margin-bottom: 2rem;
         border-radius: 3px;
         margin-top: 2rem;
+        padding: 1rem;
+
+        @media screen and (max-width: 1000px) {
+            grid-column: 1/-1;
+        }
     }
 
     &_history {
